syntax = "proto3";

package edge.proto;

// 消息类型枚举
enum MessageType {
    UNKNOWN = 0;
    HEARTBEAT = 1;           // 心跳
    AUTH = 2;                // 认证
    DRONE_STATUS = 3;        // 无人机状态
    IMAGE_DATA = 4;          // 图像数据
    VIDEO_STREAM = 5;        // 视频流
    ANOMALY_REPORT = 6;      // 异常报告
    COMMAND = 7;             // 控制命令
}

// 在现有的 message.proto 中添加视频帧消息
message VideoFrame {
    int64 timestamp = 1;
    bytes data = 2;         // 视频帧数据
    string format = 3;      // 例如: "h264", "jpeg"
    int32 width = 4;
    int32 height = 5;
    int32 frame_index = 6;  // 帧序号
}

// 在 Message 的 payload 中添加视频帧
message Message {
    // ... 现有字段 ...
    
    oneof payload {
        // ... 现有选项 ...
        VideoFrame video_frame = 11;  // 添加视频帧选项
    }
}

// ... (其他消息定义与 C++ 端相同) 